2012-11-02 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/scripts/pic16-header-parser.pl:
          New capability: Handling of I/O pins of the peripheral.
          The program creates six files in the actual directory:
                adc.tables, ccp.tables, pwm.tables, i2c.tables,
                spi.tables, usart.tables

2012-11-17 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCglobl.h,
	* src/mcs51/main.c
	* src/mcs51/gen.c (emitDummyCall,genJumpTab, genPcall):
	  added --no-ret-without-call option for compatibility with
	  Infineon's Memory Extension Stack

2012-11-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdcc.sln,
	* support/scripts/sdcc.nsi: added sdas390

2012-11-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug #3577669
	* support/regression/tests/gcc-torture-execute-20021010-1.c: reenabled

2012-11-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure: added as8xcxxx to CONFIG_FILES

2012-11-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/mappings.i:
	  Fix use of and macro for z80asm assembler.

2012-11-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* configure,
	* configure.in,
	* Makefile.in: added as8xcxxx
	* Makefile.common.in: fixed OPT_DISABLE_DS390
	* sdas/as8051/i51mch.c,
	* sdas/as8051/i51pst.c: removed flat24
	* sdas/as8xcxxx/,
	* sdas/as8xcxxx/clean.mk,
	* sdas/as8xcxxx/ds8.h,
	* sdas/as8xcxxx/ds8adr.c,
	* sdas/as8xcxxx/ds8mch.c,
	* sdas/as8xcxxx/ds8pst.c,
	* sdas/as8xcxxx/Makefile.in,
	* sdas/as8xcxxx/sdas390.vcxproj,
	* sdas/as8xcxxx/sdas390.vcxproj.filters: new, added sdas390
	* sdas/asxxsrc/asdata.c: removed flat24Mode
	* sdas/asxxsrc/asexpr.c: added exprmasks()
	* sdas/asxxsrc/asmain.c: removed S_FLAT24 case
	* sdas/asxxsrc/asout.c: outr*() synced with ASxxxx v5
	* sdas/asxxsrc/asxxxx.h: next step to ASxxxx v5
	* sdas/asxxsrc/sdas.c,
	* sdas/asxxsrc/sdas.h: added TARGET_ID_DS390